Bug 922659 - exception from onCacheEntryCheck should cause NOT_FOUND, r=michal